codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_hook_with_output_flushes_immediately_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"{running_snapshot}\\n\\n{completed_snapshot}\")"
---
running
activity:
"                                                                                "
"• Checking command                                                              "
"                                                                                "
"                                                                                "
" ┃ Ask Codex to do anything                                                     "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
history:
<empty>

completed
activity:
"                                                                                "
"                                                                                "
" ┃ Ask Codex to do anything                                                     "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
history:
• Blocked by hook
  └ command blocked by policy
